tests/compile_fail/scope_mutable_aliasing.stderr
error[E0499]: cannot borrow `i` as mutable more than once at a time
  --> $DIR/scope_mutable_aliasing.rs:12:61
   |
11 |         let _a = scope.create_nonstatic_userdata(MyUserData(&mut i))?;
   |                                                             ------ first mutable borrow occurs here
12 |         let _b = scope.create_nonstatic_userdata(MyUserData(&mut i))?;
   |                        -------------------------            ^^^^^^ second mutable borrow occurs here
   |                        |
   |                        first borrow later used by call
